--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -1,3 +1,12 @@
+// FW colors
+$fw-blue: #06347f;
+$fw-background: #ecf4ff;
+$fw-red: #a72920;
+
+
+
 #body-wrapper {
-  background: #efefef;
+  background: $fw-background;
 }
+
+
