Update ignore and update sidebar

--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -32,7 +32,7 @@
         <div class="card-body">
             <div class="container grid-md">
 
-                {{ eventlist() }}
+                {{ eventlist() | raw }}
             </div>
         </div>
     </div>
