Update logo to separate location

--- a/themes/feuerwehr-hungen/templates/partials/logo.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/logo.html.twig
@@ -1,8 +1,27 @@
+{% do assets.addCss('theme://css/fw-logo.css') %}
+
 {% set logo = theme_var(mobile ? 'custom_logo_mobile' : 'custom_logo') %}
 <a href="{{ home_url }}" class="navbar-brand mr-10">
 {% if logo %}
   {% set logo_file = (logo|first).name %}
-  <img src="{{ url('theme://images/logo/' ~ logo_file)  }}" alt="{{ site.title }}" />
+  <div class="container" >
+    <div class="columns">
+      <div class="column col-auto">
+        <img id="fw-logo-img" src="{{ url('theme://images/logo/' ~ logo_file)  }}" alt="{{ site.title }}" />
+      </div>
+
+      <div id="logo-txt-col" class="col-auto col-gapless">
+        <div  id="fw-logo-txt" class="text-bold">Feuerwehr</div>
+        <div class="columns">
+          <div class="column col-auto text-normal fw-location">
+            Hungen-Inheiden
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 {% else %}
   {% include('@images/grav-logo.svg') %}
 {% endif %}
