Update scroll coloring

--- a/themes/feuerwehr-hungen/scss/fw-logo.scss
+++ b/themes/feuerwehr-hungen/scss/fw-logo.scss
@@ -10,7 +10,8 @@
 
 .scrolled .fw-location {
   font-size: 9px;
-  color: #444c5c;
+  color: $fw-blue;
+
 }
 
 #fw-logo-txt {
@@ -22,7 +23,7 @@
 
 .scrolled #fw-logo-txt {
   font-size: 18px;
-  color: #444c5c;
+  color: $fw-blue;
 }
 
 .navbar-brand {
