Update footer with own design and coloring

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -2,6 +2,7 @@
 $fw-blue: #06347f;
 $fw-background: #ecf4ff;
 $fw-red: #a72920;
+$fw-yellow: #eab00b;
 
 #body-wrapper {
   background: $fw-background;
