Update colors and git ignore

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -1,11 +1,11 @@
 // FW colors
-$fw-blue: #06347f;
+$fw-blue: #063480;
 $fw-background: #ecf4ff;
 $fw-red: #a72920;
-$fw-yellow: #eab00b;
+$fw-yellow: #E6B01D;
+$fw-text-underline: #6D6E6F;
 
 #body-wrapper {
   background: $fw-background;
 }
-
 
