--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -26,8 +26,8 @@
 {% if config.plugins.icalendar.enabled %}
 <div class="sidebar-content">
     <div class="card">
-        <div class="card-header" id="eventHeader">
-            <div class="card-title h5" >Anstehende Veranstaltungen</div>
+        <div class="card-header fw-card-header">
+            <div class="card-title h4" >Veranstaltungen</div>
         </div>
         <div class="card-body">
             <div class="container grid-md">
