--- a/themes/feuerwehr-hungen/templates/modular/text.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/text.html.twig
@@ -1,3 +1,5 @@
+{% do assets.addCss('theme://css/fw-main.css') %}
+
 {% set grid_size = theme_var('grid-size') %}
 {% set image = page.media.images|first %}
 
