Update ical plugin to allow for specific styling and add styles for different events

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -4,6 +4,7 @@ $fw-background: #ecf4ff;
 $fw-red: #a72920;
 $fw-yellow: #E6B01D;
 $fw-text-underline: #6D6E6F;
+$fw-orange: #e24c31;
 
 #body-wrapper {
   background: $fw-background;
