Add link to calender file

--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -35,6 +35,10 @@
                 {{ eventlist() | raw }}
             </div>
         </div>
+
+        <div class="card-footer">
+            <a href="https://grav.dev.ff-inheiden.de/ical">Kalender Herunterladen</a>
+        </div>
     </div>
 
 
