Change description text

--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -37,7 +37,7 @@
         </div>
 
         <div class="card-footer">
-            <a href="https://grav.dev.ff-inheiden.de/ical">Kalender Herunterladen</a>
+            <a href="https://grav.dev.ff-inheiden.de/ical">iCal-Feed zum Abonnieren</a>
         </div>
     </div>
 
