Adjust sidebar formating and font

--- a/themes/feuerwehr-hungen/scss/fw-sidebar.scss
+++ b/themes/feuerwehr-hungen/scss/fw-sidebar.scss
@@ -8,11 +8,12 @@
 }
 
 .card-title {
-  margin-bottom: 15px;
+  margin-top: -10px;
+  margin-bottom: 5px;
 }
 
 .side-card {
-  width: 350px !important;
+
 }
 
 .side-card-body {
