--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -27,7 +27,7 @@
 <div class="sidebar-content">
     <div class="card side-card">
         <div class="card-header fw-card-header">
-            <div class="card-title h4" >Veranstaltungen</div>
+            <div class="card-title h4" ><strong>Veranstaltungen</strong></div>
         </div>
         <div class="card-body side-card-body">
             <div class="container grid-md">
