Adjust styling for sidebar and modal

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -31,3 +31,8 @@ $fw-orange: #e24c31;
   width: auto;
   height: auto;
 }
+
+.jqmodal, .jqmodal h3{
+  background-color: $fw-blue !important;
+  color: white !important;
+}
