--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -5,6 +5,7 @@ $fw-red: #a72920;
 $fw-yellow: #E6B01D;
 $fw-text-underline: #6D6E6F;
 $fw-orange: #e24c31;
+$fw-light-yellow: #ffff00;
 
 #body-wrapper {
   background: $fw-background;
