Adjust person modals for better sizing

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -16,16 +16,23 @@ $fw-light-yellow: #ffff00;
   background-color: $fw-blue;
 }
 
+.modal-body {
+  margin-top: -10px;
+  padding-top: -10px;
+}
+
 .modal-lg::backdrop {
   opacity: 0.6 !important;
 }
 
 .modal-header {
   color: white !important;
+  margin-bottom: -10px;
 }
 
-.content h4 {
+.content h5 {
   color: white !important;
+  margin-top: 2% !important;
 }
 
 .modal-image {
