--- a/themes/feuerwehr-hungen/templates/forms/fields/checkboxes/checkboxes.html.twig
+++ b/themes/feuerwehr-hungen/templates/forms/fields/checkboxes/checkboxes.html.twig
@@ -36,7 +36,7 @@
                 {% if help %}
                     <span class="hint--bottom" data-hint="{{ help|t|e('html_attr') }}">{{ text|t|e }}</span>
                 {% else %}
-                    {{ text|t|e }}
+                    {{ text|t }}
                 {% endif %}
             </label>
         </div>
