--- a/themes/feuerwehr-hungen/templates/item.html.twig
+++ b/themes/feuerwehr-hungen/templates/item.html.twig
@@ -1,9 +1,10 @@
-{% extends 'partials/base.html.twig' %}
+{% extends 'partials/item-base.html.twig' %}
 {% set blog = page.find(header_var('blog_url')|defined(theme_var('blog-page'))) %}
 {% set show_breadcrumbs = header_var('show_breadcrumbs', [page, blog])|defined(true) %}
 {% set show_sidebar = header_var('show_sidebar', [page, blog])|defined(true)  %}
 {% set show_pagination = header_var('show_pagination', [page, blog])|defined(true) %}
 {% set hero_image_name = page.header.hero_image %}
+
 
 {% block hero %}
     {% if hero_image_name %}
