--- a/themes/feuerwehr-hungen/templates/partials/glight.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/glight.html.twig
@@ -1,7 +1,15 @@
-{% do assets.addCss('theme://css/glightbox.css') %}
+{%  block stylesheets %}
+    {% do assets.addCss('theme://css/glightbox.css') %}
+{% endblock %}
+
+{% block javascript %}
+    {% do assets.addJs('theme://js/flickity.pkgd.min.js', {group:'bottom'}) %}
+    {% do assets.addJs('theme://js/glightbox.min.js', {group:'bottom'}) %}
+{% endblock %}
 
 <script type="module">
-    import 'https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js';
+    //import 'https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js';
+    //import "https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js";
 
     const lightbox = GLightbox({
         touchNavigation: true,
@@ -28,12 +36,67 @@
     var lightboxInlineIframe = GLightbox({
         selector: '.glightbox4'
     });
+
+    var carousel = document.querySelector('.main-carousel');
+    var flkty = new Flickity( carousel, {
+        // options
+        wrapAround: true,
+        //contain: true,
+        draggable: true,
+        pageDots: false,
+        imagesLoaded: true,
+        percentPosition: false,
+        groupCells: 4
+    });
+
+    var imgs = carousel.querySelectorAll('.carousel-cell img');
+    // get transform property
+    var docStyle = document.documentElement.style;
+    var transformProp = typeof docStyle.transform == 'string' ?
+        'transform' : 'WebkitTransform';
+
+    flkty.on( 'scroll', function() {
+        flkty.slides.forEach( function( slide, i ) {
+            var img = imgs[i];
+            var x = ( slide.target + flkty.x ) * -1/3;
+            img.style[ transformProp ] = 'translateX(' + x  + 'px)';
+        });
+    });
 </script>
 
 
 {% set flex = grav.get('flex') %}
 {% set directory = flex.directory('vorstellung') %}
 {% set vorstellung = directory.collection() %}
+
+
+
+<div class="carousel main-carousel">
+    {% for eintrag in vorstellung.filterBy({published: true}) %}
+        <div class="carousel-cell">
+                <div class="top-left">{{ eintrag.vorname }}</div>
+                <a
+                        href="user/images/vorstellung-images/{{ eintrag.picked_image }}"
+                        class="glightbox2"
+                        data-title="{{ eintrag.vorname }}"
+                        data-description="<h5><span><strong>Funktion:</strong>{{ eintrag.funktion|e }}</span></h5><h5><span><strong>Beruf:</strong>{{ eintrag.beruf|e }}</span></h5><h5><span><strong>Bei der Feuerwehr seit:</strong>{{ eintrag.datum|e }}</span></h5><h5><span><strong>Über Mich:</strong>{{ eintrag.beschreibung|e }}</span></h5>"
+                        data-desc-position="right"
+                        data-type="image"
+                        data-effect="fade"
+                        data-height="auto"
+                        data-width="900px"
+                        data-zoomable="true"
+                        data-draggable="true"
+                >
+                    <i class="fa-solid fa-magnifying-glass testo"></i>
+                </a>
+                <img src="user/images/vorstellung-images/{{ eintrag.picked_image }}" alt="bla"/>
+
+        </div>
+    {% endfor %}
+</div>
+
+
 
 
 <ul class="box-container four-cols">
