--- a/themes/feuerwehr-hungen/scss/fw-glight.scss
+++ b/themes/feuerwehr-hungen/scss/fw-glight.scss
@@ -163,6 +163,30 @@
   }
 }
 
+// glightbox modal
+// overrides glightbox defaults
+
+.gslide-image {
+  //padding-bottom: 2em !important;
+}
+
+.description-right {
+  max-width: 320px !important;
+}
+
+.description-right .gdesc-inner {
+  //padding-top: 1em !important;
+  padding: 10px 1em !important;
+}
+
+
+.gslide-title {
+  font-size: 1.75em !important;
+  margin-top: 5px !important;
+}
+
+
+
 
 // flickity
 
@@ -182,9 +206,11 @@ body { font-family: sans-serif; }
 }
 
 .top-left {
+  font-size: 1.5em;
   position: absolute;
   top: 8px;
   left: 16px;
+
 }
 
 .magnify {
@@ -193,6 +219,7 @@ body { font-family: sans-serif; }
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 2em;
 }
 
 .carousel-cell img {
