Adjust styling for mobile view to not overlay image with text

--- a/themes/feuerwehr-hungen/scss/fw-glight.scss
+++ b/themes/feuerwehr-hungen/scss/fw-glight.scss
@@ -166,8 +166,8 @@
 // glightbox modal
 // overrides glightbox defaults
 
-.gslide-image {
-  //padding-bottom: 2em !important;
+.gslide-media {
+  margin-bottom: 2em !important;
 }
 
 .description-right {
@@ -183,6 +183,10 @@
 .gslide-title {
   font-size: 1.75em !important;
   margin-top: 5px !important;
+}
+
+.glightbox-mobile .glightbox-container .gslide-description {
+  top: 500px !important;
 }
 
 
