--- a/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/carousel.html.twig
@@ -103,7 +103,7 @@
                                     href="user/images/vorstellung-images/{{ entry.picked_image }}"
                                     class="glightbox2"
                                     data-title="{{ entry.vorname }}"
-                                    data-description="<h5><p><strong>Funktion:</strong> {{ entry.funktion|e }}</p></h5><h5><span><strong>Beruf:</strong> {{ entry.beruf|e }}</span></h5><h5><span><strong>Bei der Feuerwehr seit:</strong> {{ entry.datum|e }}</span></h5><h5><span><strong>Über Mich:</strong> {{ entry.beschreibung|e }}</span></h5>"
+                                    data-description="<h5 class='descText'><p><strong>Funktion:</strong> {{ entry.funktion|e }}</p></h5><h5 class='descText'><span><strong>Beruf:</strong> {{ entry.beruf|e }}</span></h5><h5 class='descText'><span><strong>Bei der Feuerwehr seit:</strong> {{ entry.datum|e }}</span></h5><h5 class='descText'><span><strong>Über Mich:</strong> {{ entry.beschreibung|e }}</span></h5>"
                                     data-desc-position="right"
                                     data-type="image"
                                     data-effect="fade"
