Update frontpage modal

--- a/plugins/shortcode-modal/templates/partials/modal.html.twig
+++ b/plugins/shortcode-modal/templates/partials/modal.html.twig
@@ -1,4 +1,4 @@
 
-<div id="{{ shortcode.getParameter('name') }}" class="jqmodal">
+<div id="{{ shortcode.getParameter('name') }}" class="jqmodal details-modal">
     {{ shortcode.getContent()|raw }}
 </div>
