--- a/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
+++ b/themes/feuerwehr-hungen/templates/partials/sidebar.html.twig
@@ -1,7 +1,9 @@
 {% set feed_url = blog.url == '/' or blog.url == base_url_relative ? (base_url_relative~'/'~blog.slug) : blog.url %}
 {% set new_base_url = blog.url == '/' ? '' : blog.url %}
 
- {% do assets.addCss('theme://css/fw-sidebar.css') %}
+{%  block stylesheets %}
+    {% do assets.addCss('theme://css-compiled/fw-sidebar.css') %}
+{% endblock %}
 
 {% if config.plugins.simplesearch.enabled %}
 <div class="sidebar-content">
