--- a/themes/feuerwehr-hungen/scss/fw-sidebar.scss
+++ b/themes/feuerwehr-hungen/scss/fw-sidebar.scss
@@ -12,8 +12,103 @@
   margin-bottom: 5px;
 }
 
-.side-card {
+.jqmodal h3, .jqmodal h2 {
+  color: white;
+  margin-top: 1%;
+}
 
+.modal-image {
+  width: auto;
+  height: auto;
+}
+
+
+// -------------- DETAILS MODAL
+
+.details-modal {
+  background-color: $fw-blue !important;
+  border-radius: 0.5em;
+  box-shadow: 0 10px 20px rgba(black, 0.2);
+  //left: 25%;
+  max-width: 90%;
+  pointer-events: none;
+  //position: absolute;
+  //top: 25%;
+  //transform: translate(-50%, -50%);
+  width: 30em;
+  text-align: left;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+
+
+  // -------------- TITLE
+
+  .details-modal-title {
+
+    padding-top: 0;
+    pointer-events: all;
+    position: relative;
+    width: calc(100% - 4.5em);
+
+    h1 {
+      margin-top: 0 !important;
+      margin-bottom: 5px;
+      color: whitesmoke !important;
+      font-size: 1.25rem;
+      font-weight: 600;
+      line-height: normal;
+    }
+
+    span {
+      color: whitesmoke !important;
+      padding-bottom: 2px;
+    }
+  }
+
+  // -------------- CONTENT
+
+  .details-modal-content {
+    border-top: 1px solid #e0e0e0;
+    color: whitesmoke;
+    padding-top: 1em;
+    pointer-events: all;
+    overflow: auto;
+  }
+}
+
+// -------------- OVERLAY
+
+.overlay {
+  transition: opacity 0.2s ease-out;
+  pointer-events: none;
+  background: rgba(#0f172a, 0.8);
+  position: fixed;
+  opacity: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+
+  details[open] & {
+    pointer-events: all;
+    opacity: 0.5;
+  }
+}
+
+// -------------- DETAILS
+
+details {
+  summary {
+    list-style: none;
+
+    &:focus {
+      outline: none;
+    }
+    &::-webkit-details-marker {
+      display: none;
+    }
+  }
 }
 
 .side-card-body {
